crm/web/service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: web
  labels:
    app: crm
spec:
  # Choose how to expose your service
  ports:
    # The port number to expose the service
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: crm
    name: web
